# old-epson-drivers-epkowa-for-x64

./: README.md  epson-proprietary-sane-drivers-for-amd64-2.10.0.1-10.1.i386.dbp
etc/default/: saned32
etc/hotplug/usb/: iscan.usermap
iscan-2.10.0/: 987.files  987.includes  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  iscan.spec  iscan.spec.in  libtool  ltmain.sh
iscan-2.10.0/backend/: Makefile  Makefile.am  Makefile.in  epkowa.c  epkowa.h  epkowa_ip.c  epkowa_ip.h  epkowa_ip_api.h  epkowa_scsi.c  epkowa_scsi.h  epkowa_usb.c  epkowa_usb.h  libsane-epkowa-s.la  libsane-epkowa.la  libsane_epkowa_la-epkowa.lo  libsane_epkowa_la-epkowa_ip.lo  libsane_epkowa_la-epkowa_scsi.lo  libsane_epkowa_la-epkowa_usb.lo  libsane_epkowa_la-sane_strstatus.lo  libsane_epkowa_s_la-epkowa-s.lo
iscan-2.10.0/backend/.deps/: libsane_epkowa_la-epkowa.Plo  libsane_epkowa_la-epkowa_ip.Plo  libsane_epkowa_la-epkowa_scsi.Plo  libsane_epkowa_la-epkowa_usb.Plo  libsane_epkowa_la-sane_strstatus.Plo  libsane_epkowa_s_la-epkowa-s.Plo
iscan-2.10.0/backend/.libs/: libsane-epkowa-s.la  libsane-epkowa.exp  libsane-epkowa.la  libsane-epkowa.lai  libsane-epkowa.so.1.0.15  libsane-epkowa.ver
iscan-2.10.0/debian/: changelog  control  control.in  copyright  iscan.desktop  iscan.docs  iscan.menu  rules
iscan-2.10.0/doc/: Makefile  Makefile.am  Makefile.in  iscan.man  sane-epkowa.5  sane-epkowa.man
iscan-2.10.0/frontend/: Makefile  Makefile.am  Makefile.in  file-selector.cc  file-selector.h  gimp-plugin.h  pisa_aleart_dialog.cc  pisa_aleart_dialog.h  pisa_change_unit.cc  pisa_change_unit.h  pisa_configuration.cc  pisa_configuration.h  pisa_default_val.h  pisa_enums.h  pisa_error.cc  pisa_error.h  pisa_esmod_structs.h  pisa_gamma_correction.cc  pisa_gamma_correction.h  pisa_gimp.cc  pisa_gimp.h  pisa_gimp_1_0_patch.h  pisa_image_controls.cc  pisa_image_controls.h  pisa_img_converter.cc  pisa_img_converter.h  pisa_main.cc  pisa_main.h  pisa_main_window.cc  pisa_main_window.h  pisa_marquee.cc  pisa_marquee.h  pisa_preference.cc  pisa_preference.h  pisa_preview_window.cc  pisa_preview_window.h  pisa_progress_window.cc  pisa_progress_window.h  pisa_sane_scan.cc  pisa_sane_scan.h  (+17 more)
iscan-2.10.0/frontend/.deps/: test_file_selector-test-file-selector.Po
iscan-2.10.0/include/: Makefile  Makefile.am  Makefile.in
iscan-2.10.0/include/sane/: config.h
iscan-2.10.0/intl/: Makefile
iscan-2.10.0/lib/: Makefile  Makefile.am  Makefile.in  cfilebuf.cc  cfilebuf.hh  colour.hh  imgstream.cc  imgstream.hh  jpegstream.cc  jpegstream.hh  libimage-stream.la  libimage_stream_la-cfilebuf.lo  libimage_stream_la-imgstream.lo  libimage_stream_la-jpegstream.lo  libimage_stream_la-pngstream.lo  libimage_stream_la-pnmstream.lo  pngstream.cc  pngstream.hh  pnmstream.cc  pnmstream.hh
iscan-2.10.0/lib/.deps/: libimage_stream_la-cfilebuf.Plo  libimage_stream_la-imgstream.Plo  libimage_stream_la-jpegstream.Plo  libimage_stream_la-pngstream.Plo  libimage_stream_la-pnmstream.Plo
iscan-2.10.0/lib/.libs/: libimage-stream.la
iscan-2.10.0/libltdl/: Makefile  config.h  config.status  libltdlc.la  libtool  ltdl.lo
iscan-2.10.0/non-free/: Makefile  Makefile.am  Makefile.in  filter.hh
iscan-2.10.0/po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.po  en@boldquot.po  en@quot.po  es.gmo  es.po  fr.gmo  fr.po  iscan.pot  it.po  ja.po  ko.po  nl.po  pt.po  zh_CN.po  zh_TW.po
iscan-2.10.0/sanei/: Makefile  Makefile.am  Makefile.in  libsanei.la  libsanei_la-sanei_config.lo  libsanei_la-sanei_config2.lo  libsanei_la-sanei_constrain_value.lo  libsanei_la-sanei_init_debug.lo  libsanei_la-sanei_pio.lo  libsanei_la-sanei_scsi.lo  libsanei_la-sanei_usb.lo  sanei_config.c  sanei_scsi.c  sanei_usb.c
iscan-2.10.0/sanei/.deps/: libsanei_la-sanei_config.Plo  libsanei_la-sanei_config2.Plo  libsanei_la-sanei_constrain_value.Plo  libsanei_la-sanei_init_debug.Plo  libsanei_la-sanei_pio.Plo  libsanei_la-sanei_scsi.Plo  libsanei_la-sanei_usb.Plo
iscan-2.10.0/utils/: Makefile  Makefile.am  Makefile.in  bootstrap  make-udev-rules
iscan-2.10.0/utils/hotplug/: iscan-device
lib/systemd/system/: .saned32@.service.kate-swp  saned32.socket  saned32@.service
usr/lib/i386-linux-gnu/: libesmod.so.1.1.0
usr/lib/i386-linux-gnu/sane/: libsane-epkowa.la  libsane-epkowa.so.1.0.15
usr/lib/iscan/: libesint1F.so.2.0.0  libesint23.so.2  libesint23.so.2.0.0  libesint32.so.2  libesint32.so.2.0.0  libesint41.so.2.0.0  libesint43.so.2  libesint43.so.2.0.0  libesint52.so.2  libesint52.so.2.0.0  libesint54.so.2  libesint54.so.2.0.0  libesint66.so.2  libesint66.so.2.0.0  libesint68.so.2  libesint68.so.2.0.0  libesint7A.so.2  libesint7A.so.2.0.0  libesint7E.so.2  libesint7E.so.2.0.0
usr/sbin/: saned32
usr/share/doc/iscan-2.10.0/: AUTHORS  EAPL.ja.txt  NEWS  NEWS.ja  README.ja
usr/share/locale/de/LC_MESSAGES/: iscan.mo
usr/share/locale/en@quot/LC_MESSAGES/: iscan.mo
usr/share/locale/it/LC_MESSAGES/: iscan.mo
usr/share/locale/ja/LC_MESSAGES/: iscan.mo
usr/share/locale/ko/LC_MESSAGES/: iscan.mo
usr/share/locale/nl/LC_MESSAGES/: iscan.mo
usr/share/locale/pt/LC_MESSAGES/: iscan.mo
usr/share/locale/zh_CN/LC_MESSAGES/: iscan.mo
usr/share/locale/zh_TW/LC_MESSAGES/: iscan.mo
